--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body>
     <main>
 
-        <h3>Znajdź ofertę pracy dopasowaną do Ciebie</h3>
+        <h3>Znajdź ofertę pracy dopasowaną do Ciebie 2</h3>
         <div class="filters-container">
             <div class="wrapper one">
                 <div class="element job">
